Proyecto2/K8S/grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-ruta
  namespace: so1p2
spec:
  selector:
    matchLabels:
      role: grpc-ruta
  replicas: 1
  template:
    metadata:
      labels:
        role: grpc-ruta
    spec:
      containers:
      - name: grpc-client
        image: dannyt8355/grpc-client:grpc
        ports:
        - containerPort: 3000
      - name: grpc-server
        image: dannyt8355/grpc-server:grpc
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: service-grpc
  namespace: so1p2
spec:
  type: LoadBalancer
  ports:
  - name: grpc-client-port
    port: 3000
    targetPort: 3000
    protocol: TCP
  - name: grpc-server-port
    port: 3001
    targetPort: 3001
    protocol: TCP
  selector:
    role: grpc-ruta
