Proyecto2/K8S/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: so1p2
  annotations:
    nginx.ingress.kubernetes.io/target-type: ip
    nginx.org/listen-ports: '[80,3000,3001,4000,4001]'
    nginx.org/listen-ports-ssl: '[443]'
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 35.223.211.39.nip.io
  - http:
      paths:
      - path: /grpc/
        pathType: Prefix
        backend:
          service:
            name: service-grpc
            port:
              number: 3000
      - path: /rust/
        pathType: Prefix
        backend:
          service:
            name: service-rust
            port:
              number: 4000
